Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-46311

Magma sending stale items in backfill snapshot (GSL/exception thrown in VBucket::processSet with durability)

    XMLWordPrintable

Details

    • Untriaged
    • 1
    • Unknown
    • Magma-July-5-2021, Magma-July-12-2021, Magma-July-19-2021, Magma-Aug-2-2021

    Description

      Build = 7.0.0-5161

      On node 172.23.106.99 we see

      '2021-05-14T05:48:55.886384-07:00 ERROR 1630: Exception occurred during packet execution. Closing connection: GSL: Precondition failure at /home/couchbase/jenkins/workspace/couchbase-server-unix/kv_engine/engines/ep/src/vbucket.cc:3217. Cookies: [{"aiostat":"success","connection":"[ {\\"ip\\":\\"127.0.0.1\\",\\"port\\":54484} - {\\"ip\\":\\"127.0.0.1\\",\\"port\\":11209} (System, <ud>@ns_server</ud>) ]","engine_storage":"0x0000000000000000","ewouldblock":false,"packet":{"bodylen":280,"cas":1620996409757728768,"datatype":["JSON"],"extlen":31,"key":"<ud>.test_docs-10974158</ud>","keylen":19,"magic":"ClientRequest","opaque":6,"opcode":"DCP_PREPARE","vbucket":856},"refcount":1}]\n'
      

      Test

      guides/gradlew --refresh-dependencies testrunner -P jython=/opt/jython/bin/jython -P 'args=-i /tmp/testexec.35757.ini bucket_storage=magma,rerun=false,GROUP=P0;long_recovery,randomize_value=true,doc_size=256,bucket_eviction_policy=fullEviction,replicas=1,nodes_init=4,dcp_services=n1ql-index,enable_dp=True,get-cbcollect-info=True,infra_log_level=critical,log_level=error,upgrade_version=7.0.0-5161 -t magma.magma_crash_recovery.MagmaCrashTests.test_crash_during_recovery,num_items=1000000,doc_size=1024,sdk_timeout=60,doc_ops=create:expiry,replicas=1,GROUP=P0;long_recovery,durability=MAJORITY,multiplier=100'
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              apaar.gupta Apaar Gupta
              ritesh.agarwal Ritesh Agarwal
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty