MB-46311: Swap GSL assertion to exception

Swap a GSL assertion in VBucket::processSet to an ordinary exception
so that we can log the seqnos of the prepare currently in the HashTable
should we attempt to add another.

Change-Id: I31c2b93b2b0a6bab93910ef1e2f6865049e0f74e
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/153674
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>